--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <h2>Projects</h2>
             <h4>Below are some of my previous projects</h4>
             <ul>
+                <li><u><a href="https://github.com/NobleAmanfo/EuRadar">MlsRadar</a></u></li>
                 <li><u><a href="https://github.com/NobleAmanfo/WaterShop">Water Shop</a></u></li>
                 <li><u><a href="https://github.com/NobleAmanfo/VibesConcept">Vibes Concept</a></u>
                     <li><u><a href="https://github.com/NobleAmanfo/Edsheeran_player">Music Player</a></u>
-                   
                 </li>
                 <li><u><a href="https://github.com/NobleAmanfo/Finance_app">Finance App</a></u>
                     
