--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            
 
             <h2>Projects</h2>
-            <h4>Below are some of my previous projects</h4>
+            <h4>Below are some of my recent projects</h4>
             <ul>
                 <li><u><a href="https://github.com/NobleAmanfo/EuRadar">MlsRadar</a></u></li>
                 <li><u><a href="https://github.com/NobleAmanfo/WaterShop">Water Shop</a></u></li>
