--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p>Towson, MD</p>
             
             <a href="https://www.linkedin.com/in/noble-amanfo-b27b19148//"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/JalIrani"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/NobleAmanfo"><i class="fab fa-github"></i></a>
             <a href="mailto:nobleamanfo5@gmail.com"><i class="fas fa-envelope"></i></a>  
 
         </div>
