--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             
             <h2>Info</h2>
             <ul>
-                <li><u><a href="Noble’s CV-2.pdf">Resume</a></u></li>
+                <li><u><a href="Resume.docx.pdf">Resume</a></u></li>
                
             </ul>
         </div>
