--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>I am currently a graduate student in <u><a href="https://www.towson.edu" style="display:inline">Towson University,</a></u> studying to complete my masters in Applied Information Technology. I'm a hardworker, a perfectionist, and most of all, a young man who loves learning. I am an artist and a songwriter and I have experience with react native, flutter, dart, and C. I am currently learning reactJS and swift too. Below are some of the projects I've done.
+            <p>I am a recent graduate of <u><a href="https://www.towson.edu" style="display:inline">Towson University,</a></u> finishing and collecting a masters degree in Applied Information Technology. I'm a hardworker, a perfectionist, and most of all, a young man who loves learning. I am an artist and a songwriter and I have experience with react native, flutter, dart, and C. I am currently learning reactJS and swift too. Below are some of the projects I've done.
             </p>
            
 
